feat(singer): move to the new scripting engine (#34)
part of kestra-io/kestra#1726